# luascoin

./: CONTRIBUTING.md  COPYING  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  libluaconsensus.pc.in  libluascoinconsensus.pc  libluascoinconsensus.pc.in  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
build-aux/m4/: lua_find_bdb48.m4  luascoin_find_bdb48.m4  luascoin_qt.m4  luascoin_subdir_to_include.m4  sov_qt.m4  sov_subdir_to_include.m4
contrib/: README.md  lua-qt.pro  luad.bash-completion  luascoin-qt.pro  luascoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  changelog  control  copyright  (+22 more)
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  instantsend.md  keepass.md  masternode-budget.md  masternode_conf.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
lua-docs/: protocol-documentation.md
luascoin-docs/: protocol-documentation.md
qa/: README.md
share/: setup.nsi  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addressindex.h  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bip39.h  bip39_english.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.cpp  dbwrapper.h  dsnotificationinterface.h  governance-classes.cpp  (+93 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/config/: lua-config.h.in  luascoin-config.h  luascoin-config.h.in  stamp-h1
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha512.h
src/drafted/: governance-categories.h  governance-classes.h  governance-keys.cpp  governance-keys.h  governance-types.cpp  governance-types.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  darksendconfig.cpp  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  lua-qt.files  lua.cpp  lua.qrc  lua_locale.qrc  luaaddressvalidator.cpp  luaaddressvalidator.h  luaamountfield.cpp  luaamountfield.h  luagui.cpp  luagui.h  luascoin-qt.files  luascoin.cpp  luascoin.qrc  luascoin_locale.qrc  luascoinaddressvalidator.cpp  luascoinaddressvalidator.h  luascoinamountfield.cpp  luascoinamountfield.h  luascoingui.cpp  luascoingui.h  (+71 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  darksendconfig.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  intro.ui.autosave  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  settingspage.ui  signverifymessagedialog.ui  toolspage.ui
src/qt/locale/: lua_bg.ts  lua_de.ts  lua_en.ts  lua_es.ts  lua_fi.ts  lua_fr.ts  lua_it.ts  lua_ja.ts  lua_pl.ts  lua_pt.ts  lua_ru.ts  lua_sk.ts  lua_sv.ts  lua_vi.ts  lua_zh_CN.ts  lua_zh_TW.ts  luascoin_bg.ts  luascoin_de.ts  luascoin_en.ts  luascoin_es.ts  luascoin_fi.ts  luascoin_fr.ts  luascoin_it.ts  luascoin_ja.ts  luascoin_pl.ts  luascoin_pt.ts  luascoin_ru.ts  luascoin_sk.ts  luascoin_sv.ts  luascoin_vi.ts  luascoin_zh_CN.ts  luascoin_zh_TW.ts
src/qt/res/: lua-qt-res.rc
src/qt/res/bb/icons/: SovereignCoin.icns
src/qt/test/: Makefile  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  governance.cpp  masternode.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  luaconsensus.cpp  luaconsensus.h  luascoinconsensus.cpp  luascoinconsensus.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  cachemap_tests.cpp  cachemultimap_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  governance_validators_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  lua-util-test.py  luascoin-util-test.py  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  (+27 more)
src/test/data/: README.md  lua-util-test.json  luascoin-util-test.json  proposals-invalid.json  proposals-valid.json
src/univalue/lib/: univalue_escapes.h
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+139 files in other folders)
